; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/extr_environment.c_getenv.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/extr_environment.c_getenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_var = type { i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getenv(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.env_var*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call %struct.env_var* @env_getenv(i8* %5)
  store %struct.env_var* %6, %struct.env_var** %4, align 8
  %7 = icmp ne %struct.env_var* %6, null
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load %struct.env_var*, %struct.env_var** %4, align 8
  %10 = getelementptr inbounds %struct.env_var, %struct.env_var* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %8
  %14 = load %struct.env_var*, %struct.env_var** %4, align 8
  %15 = getelementptr inbounds %struct.env_var, %struct.env_var* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %2, align 8
  br label %19

17:                                               ; preds = %8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %19

18:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %19

19:                                               ; preds = %18, %17, %13
  %20 = load i8*, i8** %2, align 8
  ret i8* %20
}

declare dso_local %struct.env_var* @env_getenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
